--- a/app/views/parkings/_parking_data.html.erb
+++ b/app/views/parkings/_parking_data.html.erb
@@ -2,7 +2,7 @@
   <div class="panel <%= panel_type_class(parking) %>">
     <div class="panel-heading"><span class='place_number'><%= parking.name %></span></div>
     <div class="panel-body">
-      <% parking.places.each do |place| %>
+      <% parking.places.sort_by(&:number).each do |place| %>
         <div class="well <%= occupied?(place) %>">
           <%= form_for(place, remote: true) do |f| %>
             <div class="field">
