--- a/app/views/parkings/_parking_data.html.erb
+++ b/app/views/parkings/_parking_data.html.erb
@@ -9,15 +9,15 @@
               <div class='col-md-1'>
                 <span class='place_number'><%= place.number %></span>
               </div>
-              <div class='col-md-7'>
+              <div class='col-md-3'>
                 <% if place.occupied %>
                   <span class='driver_data'><%=l place.updated_at, format: :short %></span>
                 <%end%>
                 <%= f.hidden_field :occupied, value: !place.occupied%>
               </div>
-              <div class='col-md-4'>
-                <%= f.submit button_title(place), class: 'btn btn-primary'%>
-              </div>  
+              <div class='col-md-8'>
+                <%= f.submit button_title(place), class: 'btn btn-lg btn-block btn-primary'%>
+              </div>
             </div>
           <%end%>
         </div>
