--- a/app/views/parkings/_form.html.erb
+++ b/app/views/parkings/_form.html.erb
@@ -1,8 +1,10 @@
 <div class="well">
-<%= form_for(@parking, class: "form-inline") do |f| %>
+<%= form_for(@parking, class: 'form-inline') do |f| %>
   <div class="field">
     <%= f.label :name, 'Название' %><br>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.text_field :name, class: 'form-control' %>
+    </br>
+    <%= f.file_field :schema, class: 'form-control' %>
   </div>
   </br>
   <div class="actions">
