--- a/app/views/parkings/_parking_data.html.erb
+++ b/app/views/parkings/_parking_data.html.erb
@@ -1,14 +1,9 @@
 <div class="<%= block_width_class %>">
   <div class="panel <%= panel_type_class(parking) %>">
-    <div class="panel_heading row place_number">
-      <div class="col-md-6 col-xs-6 text-left">
-       <%= parking.name %>
-      </div>
-      <div class="col-md-6 col-xs-6 text-right">
-        <%if parking.schema.url %>
-          <%= link_to 'Schema of parking', :controller => 'schema', :url => parking.schema.url %>
-        <%end%>
-      </div>
+    <div class="panel-heading">
+      <span class='place_number'>
+        <%= parking.name %>
+      </span>
     </div>
     <div class="panel-body">
       <% parking.places.sort_by(&:number).each do |place| %>
@@ -34,6 +29,9 @@
             </div>
           <%end%>
         </div>
+        <%if parking.schema.url %>
+          <%= link_to "Схема #{parking.name}", schema_path(parking.id), class: 'btn btn-lg btn-block btn-info pull-right' %>
+        <%end%>
       <%end%>
     </div>
   </div>
