--- a/app/views/parkings/_form.html.erb
+++ b/app/views/parkings/_form.html.erb
@@ -3,6 +3,7 @@
   <div class="field">
     <%= f.label :name, 'Название' %><br>
     <%= f.text_field :name, class: 'form-control' %>
+    <%= f.text_field :vault_uid, class: 'form-control' %>
   </div>
   </br>
   <div class="actions">
