--- a/app/views/parkings/_parking_data.html.erb
+++ b/app/views/parkings/_parking_data.html.erb
@@ -21,11 +21,7 @@
                   <%= f.hidden_field :occupied, value: !place.occupied%>
                 </div>
                 <div class='col-md-8'>
-                <% if place.occupied %>
-                  <%= f.submit button_title(place), class: 'btn btn-lg btn-block btn-primary', data: { confirm: "Освободить место ##{place.number}?" }%>
-                <% else %>
-                  <%= f.submit button_title(place), class: 'btn btn-lg btn-block btn-primary' %>
-                <% end %>
+                  <%= f.submit button_title(place), class: 'btn btn-lg btn-block btn-primary', data: { confirm: "#{place.occupied ? 'Освободить' : 'Занять'} место ##{place.number}?" }%>
                 </div>
               </div>
             <%end%>
