--- a/app/views/parkings/index.html.erb
+++ b/app/views/parkings/index.html.erb
@@ -2,10 +2,9 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <% if params[:show_all] %>
-        <li><%= link_to 'Показывать только свободные паркоместа', root_path %></li>
-
+        <li class="show-free-only"><%= link_to 'Показывать только свободные', root_path %></li>
       <% else %>
-        <li><%= link_to 'Показывать все паркоместа', root_path(show_all: true) %></li>
+        <li class="show-all"><%= link_to 'Показывать все паркоместа', root_path(show_all: true) %></li>
       <% end %>
     </ul>
   </div>
