--- a/app/views/parkings/_parking_data.html.erb
+++ b/app/views/parkings/_parking_data.html.erb
@@ -1,7 +1,7 @@
 <div class="<%= block_width_class %>">
   <div class="panel <%= panel_type_class(parking) %>">
     <div class="panel-heading">
-      <span class='place_number'>
+      <span class='parking_name'>
         <%= parking.name %>
       </span>
     </div>
@@ -11,9 +11,6 @@
           <div class="well <%= occupied?(place) %>">
             <%= form_for(place, remote: true) do |f| %>
               <div class="row">
-                <div class='col-md-1'>
-                  <span class='place_number'><%= place.number %></span>
-                </div>
                 <div class='col-md-3'>
                   <% if place.occupied %>
                     <span class='driver_data'><%=l place.updated_at, format: :short %></span>
